# AI-PoC

./: .gitignore  Readme.md  install.ipynb  pyproject.toml
Monitoring/: Langfuse SDK Solution.ipynb
Part1/: 1_dataPrep.ipynb  2_BigramLanguageModel.ipynb  3_Attention.ipynb
Part1/_solutions/: 1_dataPrep.ipynb  2_BigramLanguageModel.ipynb  3_Attention.ipynb  4_GPTModel.ipynb
Part2/FineTuning/: FineTune Instructions Solution.ipynb
Testing/: Deep Eval Testing Solution.ipynb
Testing/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
Testing/.ipynb_checkpoints/: Deep Eval Testing Solution-checkpoint.ipynb
